--- a/0_Exploratory_data_analisy.ipynb
+++ b/0_Exploratory_data_analisy.ipynb
@@ -10,20 +10,26 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "# Bibliotecas padrão para manipulação do sistema operacional\n",
     "import os\n",
     "# Bibliotecas para manipulação de dados\n",
     "import pandas as pd  # Manipulação de dados tabulares\n",
-    "import re  # Manipulação de textos\n",
-    "import xlrd  # Manipulação de excel xls\n",
     "# Bibliotecas próprias\n",
-    "from ETL.Data_extraction import *  # Biblioteca própria para extração dos dados\n",
-    "from ETL.Data_transformation import *  # Biblioteca própria para transformação dos dados\n",
+    "from PROJECT_LIBRARY.Data_extraction import *  # Biblioteca própria para extração dos dados\n",
+    "from PROJECT_LIBRARY.Data_transformation import *  # Biblioteca própria para transformação dos dados\n",
+    "# Biblioteca de avisos\n",
+    "import warnings\n",
     "\n",
     "\n",
+    "# Configurações\n",
+    "warnings.filterwarnings('ignore')\n",
     "pd.options.display.max_rows = None\n",
     "pd.options.display.max_columns = None\n",
     "pd.options.display.max_colwidth = None\n",
@@ -68,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +157,7 @@
        " 'M_COUN_VAAR']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,12 +191,19 @@
     "## Descrições\n",
     "- Inicialmente, de 2007 a 2011, as planilhas são compostas por 25 abas.\n",
     "- A partir de 2012 a 2019 se vê a adição de duas abas denominadas \"E_Ajuste\" e \"M_Ajuste\", mudando de 25 para 27 abas. \n",
-    "- Em 2020, as abas de ajustes são integradas nas abas dos recursos, reduziando o numero de abas para 25 novamente, entretanto, praticamente, dobrando a quantidade de tabelas. Estão inclusos nesta planilha os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 2, de 10 de agosto de 2020 e os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 3, de 25 de novembro de 2020. \n",
+    "- Em 2020, as abas de ajustes são integradas nas abas dos recursos, reduziando o numero de abas para 25 novamente, entretanto, praticamente, dobrando a quantidade de tabelas. Estão inclusos nesta planilha os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 2, de 10 de agosto de 2020 e os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 3, de 25 de novembro de 2020. A partir de então, requer-se um tratamento diferenciado dos dados.\n",
     "- Logo após, em 2021, 'E_COUN' é subdividida em 'E_COUN_VAAF' e 'E_COUN_VAAT', assim como 'M_COUN' para 'M_COUN_VAFF' e 'M_COUN_VAAT', retornando o numero de abas para 27. Estão inclusos nesta planilha os valores do ajuste da complementação da União previsto na Portaria Interministerial nº 3 , de 24 de maio de 2020.\n",
     "- Em 2022, são removidas as aba 'E_LC8796' e 'M_LC8796' e adicionadas as 'E_AFE_EC123' e 'M_AFE_EC123', mantendo o número de abas em 27. Estão inclusos nesta planilha os valores do ajuste.\n",
     "- E por fim, em 2023, as abas 'E_AFE_EC123' e 'M_AFE_EC123' são removidas e a entram as novas abas 'E_COUNT_VAAR' e 'M_COUNT_VAAR', mantendo o número de abas em 27. Estão inclusos nesta planilha os valores do ajuste.\n",
     "\n",
     "Dentre as colunas presentes nos dados, não serão necessárias: 'E_Tot1_U', 'E_Tot2_E', 'E_TOTAL', 'M_Tot1_U', 'M_Tot2_E', 'M_TOTAL', 'Resumo'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tratamento dos dados por ano até de 2019"
    ]
   },
   {
@@ -230,8 +243,22 @@
     "    # Ordenamento dos dados para UF e COMPETÊNCIA\n",
     "    df01 = df01.sort_values(by=['UF', 'COMPETÊNCIA']).reset_index(drop=True)\n",
     "    return df01\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tratamento dos dados por ano a partir de 2020"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Função de tratamento dos dados de 2020 em diante\n",
     "def preprocessing_data_from_2020_onwards(io, sheet_name, skiprows, header):\n",
     "    # leitura do arquivo das tabelas principais\n",
@@ -277,8 +304,22 @@
     "    # Ordenamento dos dados para UF e COMPETÊNCIA\n",
     "    df01 = df01.sort_values(by=['UF', 'COMPETÊNCIA']).reset_index(drop=True)\n",
     "    df02 = df02.sort_values(by=['UF', 'COMPETÊNCIA']).reset_index(drop=True)\n",
-    "    return df01, df02\n",
-    "\n",
+    "    return df01, df02\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dados 01 (Consolidado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Função de automatização do tratamento de todos os dados dentro de uma pasta\n",
     "def consolidation_data(fold):\n",
     "    # Captando lista de todoas os nomes de abas dentro dos arquivos\n",
@@ -347,8 +388,22 @@
     "    df01 = df01.reset_index()\n",
     "    df01.to_parquet('./DATASETS/consolidated_data.parquet')\n",
     "    return df01\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dados 02 (Sumarizado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sumarização dos dados (Competência, uf, esfera, descrição, repasse, total)\n",
     "def summarization_data(fold):\n",
     "    df = consolidation_data(fold=fold)\n",
@@ -375,6 +430,7 @@
     "    # Gerando tabela final\n",
     "    df_pivoted = pd.pivot_table(data=df_melted, values='TOTAL', index=[\n",
     "                                'ESFERA', 'UF', 'COMPETÊNCIA', 'REPASSE'], columns='TIPO DE REPASSE', aggfunc='sum', fill_value=0).reset_index()\n",
+    "    # Adicionando coluna de categoria de repasses\n",
     "    map = {'AFE_EC123': 'Outros',\n",
     "           'Ajuste': 'Outros',\n",
     "           'COUN': 'Outros',\n",
@@ -390,8 +446,329 @@
     "           'ITR': 'ITR',\n",
     "           'LC8796': 'Outros'}\n",
     "    df_pivoted['CATEGORIA'] = df_pivoted.REPASSE.map(map)\n",
+    "    # Convertendo os dados para formato parquet\n",
     "    df_pivoted.to_parquet('./DATASETS/summarized_data.parquet')\n",
     "    return df_pivoted"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sentiu-se a necessidade de reduzir o numero de colunas ao dataset para apendas ['COMPETÊNCIA', 'EC123', 'COUN', 'VAAF', 'VAAR', 'VAAT', 'FPE', 'FPM', 'ICMS', 'IPI', 'IPVA', 'ITCMD', 'ITR', 'LC8796', 'Ajuste', 'UF']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_parquet('./DATASETS/consolidated_data.parquet')\n",
+    "unique_var = []\n",
+    "for item in df.columns.to_list():\n",
+    "    var = item.split(sep='_')[-1]\n",
+    "    if var not in unique_var:\n",
+    "        unique_var.append(var)\n",
+    "unique_var.remove('COMPETÊNCIA')\n",
+    "unique_var.remove('UF')\n",
+    "print(unique_var)\n",
+    "print(len(unique_var))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dados 03 (Final)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def finally_data(fold: str):\n",
+    "    # Leitura dos dados\n",
+    "    df = consolidation_data(fold=fold)\n",
+    "    # Divisão dos dados por variável numérica\n",
+    "    df_list = []\n",
+    "    for col in df.columns.to_list():\n",
+    "        filter = ['COMPETÊNCIA', 'UF', f'{col}']\n",
+    "        data = df[filter]\n",
+    "        name = col.split(sep='_')\n",
+    "        if ('A' in name) or ('Ajuste' in name):\n",
+    "            data['AJUSTES'] = True\n",
+    "        else:\n",
+    "            data['AJUSTES'] = False\n",
+    "        if 'E' in name:\n",
+    "            data['ESFERA'] = 'ESTADUAL'\n",
+    "        elif 'M' in name:\n",
+    "            data['ESFERA'] = 'MUNICIPAL'\n",
+    "        else:\n",
+    "            data['ESFERA'] = None\n",
+    "        data.columns = ['COMPETÊNCIA', 'UF', f'{name[-1]}', 'AJUSTES', 'ESFERA']\n",
+    "        data = data[['COMPETÊNCIA', 'UF', 'AJUSTES', 'ESFERA', f'{name[-1]}']]\n",
+    "        df_list.append(data)\n",
+    "    df_list = df_list[1:-1]\n",
+    "    # Agrupamento dos dados\n",
+    "    df_base = df_list[0]\n",
+    "    for df_temp in df_list[1:]:\n",
+    "        col = df_temp.columns[-1]\n",
+    "        if col in df_base.columns.to_list():\n",
+    "            df_base = pd.merge(df_base, df_temp, on=['COMPETÊNCIA', 'UF', 'AJUSTES', 'ESFERA', col], how='outer')\n",
+    "        else:\n",
+    "            df_base = pd.merge(df_base, df_temp, on=['COMPETÊNCIA', 'UF', 'AJUSTES', 'ESFERA'], how='outer')\n",
+    "    # Tratamento de valores ausentes\n",
+    "    df_base.fillna(0, inplace=True)\n",
+    "    # Adição da coluna total\n",
+    "    df_base['TOTAL'] = df_base.sum(axis='columns', numeric_only=True)\n",
+    "    # Arquivamento dos dados\n",
+    "    df_base.to_parquet('./DATASETS/finally_data.parquet')\n",
+    "    return df_base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COMPETÊNCIA</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>AJUSTES</th>\n",
+       "      <th>ESFERA</th>\n",
+       "      <th>EC123</th>\n",
+       "      <th>COUN</th>\n",
+       "      <th>VAAF</th>\n",
+       "      <th>VAAR</th>\n",
+       "      <th>VAAT</th>\n",
+       "      <th>FPE</th>\n",
+       "      <th>FPM</th>\n",
+       "      <th>ICMS</th>\n",
+       "      <th>IPI</th>\n",
+       "      <th>IPVA</th>\n",
+       "      <th>ITCMD</th>\n",
+       "      <th>ITR</th>\n",
+       "      <th>LC8796</th>\n",
+       "      <th>Ajuste</th>\n",
+       "      <th>TOTAL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2007-01-01</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2007-01-01</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2007-01-01</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2007-01-01</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2007-01-01</td>\n",
+       "      <td>AC</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3,548.46</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>3,548.46</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  COMPETÊNCIA  UF  AJUSTES    ESFERA  EC123  COUN  VAAF  VAAR  VAAT  FPE  FPM  \\\n",
+       "0  2007-01-01  AC    False  ESTADUAL   0.00  0.00  0.00  0.00  0.00 0.00 0.00   \n",
+       "1  2007-01-01  AC    False  ESTADUAL   0.00  0.00  0.00  0.00  0.00 0.00 0.00   \n",
+       "2  2007-01-01  AC    False  ESTADUAL   0.00  0.00  0.00  0.00  0.00 0.00 0.00   \n",
+       "3  2007-01-01  AC    False  ESTADUAL   0.00  0.00  0.00  0.00  0.00 0.00 0.00   \n",
+       "4  2007-01-01  AC    False  ESTADUAL   0.00  0.00  0.00  0.00  0.00 0.00 0.00   \n",
+       "\n",
+       "   ICMS      IPI  IPVA  ITCMD  ITR  LC8796  Ajuste    TOTAL  \n",
+       "0  0.00     0.00  0.00   0.00 0.00    0.00    0.00     0.00  \n",
+       "1  0.00     0.00  0.00   0.00 0.00    0.00    0.00     0.00  \n",
+       "2  0.00     0.00  0.00   0.00 0.00    0.00    0.00     0.00  \n",
+       "3  0.00     0.00  0.00   0.00 0.00    0.00    0.00     0.00  \n",
+       "4  0.00 3,548.46  0.00   0.00 0.00    0.00    0.00 3,548.46  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_base = finally_data('./RAW_DATAS')\n",
+    "df_base.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Atualização dos dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Atualização dos dados\n",
+    "def upgrade_data(fold, update=False):\n",
+    "    if update == True:\n",
+    "        try:\n",
+    "            download_all_excel_datas(destiny_fold=fold)\n",
+    "        except:\n",
+    "            print('Erro ao efetuar download!')\n",
+    "    try:\n",
+    "        consolidation_data(fold=fold)\n",
+    "        summarization_data(fold=fold)\n",
+    "        finally_data(fold=fold)\n",
+    "    except:\n",
+    "        print('Erro ao gerar datasets!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arquivo 2024 desatualizado, refazendo download.\n",
+      "Erro ao efetuar download!\n"
+     ]
+    }
+   ],
+   "source": [
+    "upgrade_data('./RAW_DATAS', True)"
    ]
   }
  ],
@@ -411,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
