Remoção de dados duplicados adicionado a função

--- a/0_Exploratory_data_analisy.ipynb
+++ b/0_Exploratory_data_analisy.ipynb
@@ -530,6 +530,10 @@
     "            df_base = pd.merge(df_base, df_temp, on=['COMPETÊNCIA', 'UF', 'AJUSTES', 'ESFERA'], how='outer')\n",
     "    # Tratamento de valores ausentes\n",
     "    df_base.fillna(0, inplace=True)\n",
+    "    # Tratamento de constantes \n",
+    "    # - (Não foram identificadas constantes entre os dados)\n",
+    "    # # Tratamento de duplicados\n",
+    "    df_base.drop_duplicates(inplace=True)\n",
     "    # Adição da coluna total\n",
     "    df_base['TOTAL'] = df_base.sum(axis='columns', numeric_only=True)\n",
     "    # Arquivamento dos dados\n",
