--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-11 08:44:01.009 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-11 08:44:01.012 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-11 08:44:01.013 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n",
-      "2024-04-11 08:44:01.014 WARNING streamlit.runtime.caching.cache_data_api: No runtime found, using MemoryCacheStorageManager\n"
-     ]
+   "execution_count": 7,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,8 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -199,7 +196,7 @@
        "4   NaN  3548.46   NaN    NaN  NaN     NaN     NaN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,8 +208,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -252,8 +253,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "df.fillna(0, inplace=True)"
@@ -261,7 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.drop_duplicates(inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -269,30 +287,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 239112 entries, 0 to 239111\n",
+      "Index: 110854 entries, 0 to 239098\n",
       "Data columns (total 18 columns):\n",
       " #   Column       Non-Null Count   Dtype         \n",
       "---  ------       --------------   -----         \n",
-      " 0   COMPETÊNCIA  239112 non-null  datetime64[us]\n",
-      " 1   UF           239112 non-null  object        \n",
-      " 2   AJUSTES      239112 non-null  bool          \n",
-      " 3   ESFERA       239112 non-null  object        \n",
-      " 4   EC123        239112 non-null  float64       \n",
-      " 5   COUN         239112 non-null  float64       \n",
-      " 6   VAAF         239112 non-null  float64       \n",
-      " 7   VAAR         239112 non-null  float64       \n",
-      " 8   VAAT         239112 non-null  float64       \n",
-      " 9   FPE          239112 non-null  float64       \n",
-      " 10  FPM          239112 non-null  float64       \n",
-      " 11  ICMS         239112 non-null  float64       \n",
-      " 12  IPI          239112 non-null  float64       \n",
-      " 13  IPVA         239112 non-null  float64       \n",
-      " 14  ITCMD        239112 non-null  float64       \n",
-      " 15  ITR          239112 non-null  float64       \n",
-      " 16  LC8796       239112 non-null  float64       \n",
-      " 17  Ajuste       239112 non-null  float64       \n",
+      " 0   COMPETÊNCIA  110854 non-null  datetime64[us]\n",
+      " 1   UF           110854 non-null  object        \n",
+      " 2   AJUSTES      110854 non-null  bool          \n",
+      " 3   ESFERA       110854 non-null  object        \n",
+      " 4   EC123        110854 non-null  float64       \n",
+      " 5   COUN         110854 non-null  float64       \n",
+      " 6   VAAF         110854 non-null  float64       \n",
+      " 7   VAAR         110854 non-null  float64       \n",
+      " 8   VAAT         110854 non-null  float64       \n",
+      " 9   FPE          110854 non-null  float64       \n",
+      " 10  FPM          110854 non-null  float64       \n",
+      " 11  ICMS         110854 non-null  float64       \n",
+      " 12  IPI          110854 non-null  float64       \n",
+      " 13  IPVA         110854 non-null  float64       \n",
+      " 14  ITCMD        110854 non-null  float64       \n",
+      " 15  ITR          110854 non-null  float64       \n",
+      " 16  LC8796       110854 non-null  float64       \n",
+      " 17  Ajuste       110854 non-null  float64       \n",
       "dtypes: bool(1), datetime64[us](1), float64(14), object(2)\n",
-      "memory usage: 31.2+ MB\n"
+      "memory usage: 15.3+ MB\n"
      ]
     }
    ],
@@ -302,9 +320,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COMPETÊNCIA</th>\n",
+       "      <th>UF</th>\n",
+       "      <th>AJUSTES</th>\n",
+       "      <th>ESFERA</th>\n",
+       "      <th>EC123</th>\n",
+       "      <th>COUN</th>\n",
+       "      <th>VAAF</th>\n",
+       "      <th>VAAR</th>\n",
+       "      <th>VAAT</th>\n",
+       "      <th>FPE</th>\n",
+       "      <th>FPM</th>\n",
+       "      <th>ICMS</th>\n",
+       "      <th>IPI</th>\n",
+       "      <th>IPVA</th>\n",
+       "      <th>ITCMD</th>\n",
+       "      <th>ITR</th>\n",
+       "      <th>LC8796</th>\n",
+       "      <th>Ajuste</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>212667</th>\n",
+       "      <td>2023-01-01</td>\n",
+       "      <td>AP</td>\n",
+       "      <td>False</td>\n",
+       "      <td>ESTADUAL</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       COMPETÊNCIA  UF  AJUSTES    ESFERA  EC123  COUN  VAAF  VAAR  VAAT  FPE  \\\n",
+       "212667  2023-01-01  AP    False  ESTADUAL    0.0   0.0   0.0   0.0   0.0  0.0   \n",
+       "\n",
+       "        FPM  ICMS  IPI  IPVA  ITCMD  ITR  LC8796  Ajuste  \n",
+       "212667  0.0   0.0  0.0   0.0    0.0  0.0     0.0     0.0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x = df.loc[(df['COMPETÊNCIA']>='2023-01-01') & (df['COMPETÊNCIA']<'2024-01-01') & (df.ESFERA=='ESTADUAL') & (df.AJUSTES==False) & (df.UF=='AP')]\n",
     "x.head(1)"
@@ -312,14 +410,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adria\\AppData\\Local\\Temp\\ipykernel_12376\\192249167.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\adria\\AppData\\Local\\Temp\\ipykernel_15056\\192249167.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -404,7 +502,7 @@
        "212667  0.0   0.0  0.0   0.0    0.0  0.0     0.0     0.0   0.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
