Agrupamento dos dados para melhor eficiência

--- a/0_Exploratory_data_analisy.ipynb
+++ b/0_Exploratory_data_analisy.ipynb
@@ -536,6 +536,8 @@
     "    df_base.drop_duplicates(inplace=True)\n",
     "    # Adição da coluna total\n",
     "    df_base['TOTAL'] = df_base.sum(axis='columns', numeric_only=True)\n",
+    "    # Agrupamento final\n",
+    "    df_base = df_base.groupby(['COMPETÊNCIA', 'ESFERA', 'UF', 'AJUSTES']).sum(min_count=2).reset_index().fillna(0)\n",
     "    # Arquivamento dos dados\n",
     "    df_base.to_parquet('./DATASETS/finally_data.parquet')\n",
     "    return df_base"
