--- a/1_DDA.ipynb
+++ b/1_DDA.ipynb
@@ -78,6 +78,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# INSIGHTS DA ANÁLISE EXPLORATÓRIA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DADOS BRUTOS:\n",
+    "- Inicialmente, de 2007 a 2011, as planilhas são compostas por 25 abas.\n",
+    "- A partir de 2012 a 2019 se vê a adição de duas abas denominadas \"E_Ajuste\" e \"M_Ajuste\", mudando de 25 para 27 abas (Dando início a ajustes ao decorrer do tempo). \n",
+    "- Em 2020, as abas de ajustes são dissolvidas nas abas de cada variável e paralelizadas em uma nova tabela abaixo das normais, reduzindo o número de abas para 25 novamente, entretanto, praticamente, dobrando a quantidade de tabelas. Estão inclusos nestas planilha os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 2, de 10 de agosto de 2020 e os valores do ajuste estabelecido pela Portaria Interministerial MEC/ME nº 3, de 25 de novembro de 2020. A partir de 2020, requer-se um tratamento diferenciado dos dados.\n",
+    "- Logo após, em 2021, 'E_COUN' é subdividida em 'E_COUN_VAAF' e 'E_COUN_VAAT', assim como 'M_COUN' para 'M_COUN_VAAF' e 'M_COUN_VAAT', reduzindo, novamente, o numero de abas para 27. Estão inclusos nestas planilhas os valores dos ajustes da complementação da União previsto na Portaria Interministerial nº 3 , de 24 de maio de 2020.\n",
+    "- Em 2022, são removidas as aba 'E_LC8796' e 'M_LC8796' e adicionadas as 'E_AFE_EC123' e 'M_AFE_EC123', mantendo o número de abas em 27.\n",
+    "- E por fim, em 2023, as abas 'E_AFE_EC123' e 'M_AFE_EC123' são removidas e a entram em cena as novas abas 'E_COUNT_VAAR' e 'M_COUNT_VAAR', mantendo o número de abas em 27. \n",
+    "\n",
+    "DADOS CONSOLIDADOS E SUMARIZADOS - INSIGHTS (GERAL, MEDIDAS DE CENTRALIDADE, DISPERSÃO, DISTRIBUIÇÃO, FREQUÊNCIA E PADRÕES):\n",
+    "- GERAL\n",
+    "    - Os dados brutos já foram previamente tratados para sua consolidação e sumarização (valores nulos, duplicados, constantes, dados sujos e inconsistentes).\n",
+    "    - Os dados possuem 1 variável de tempo, 3 categóricas e 15 numéricas.\n",
+    "    - A variável 'total' totaliza as demais variáveis numéricas.\n",
+    "    - Todas as variáveis numéricas possuem outliers.\n",
+    "    - Todas as variáveis numéricas são contínuas.\n",
+    "    - Valores negativos e alguns positivos se tratam de ajustes.\n",
+    "- DADOS TEMPORAIS\n",
+    "    - A variável 'data' vai de 2007-01-01 até 2024-03-31, mas não se tratam de valores únicos devido a duplicidade para diferenciação da variável categórica ajuste.\n",
+    "    - A variável 'data' possui uma amplitude de cerca de 17 anos.\n",
+    "    - A variável 'data' possue uma frequencia mensal.\n",
+    "- DADOS CATEGÓRICOS\n",
+    "    - MEDIDAS DE FREQUÊNCIA\n",
+    "        - A variável categórica 'esfera' contem 02 categorias ('ESTADUAL' e 'MUNICIPAL') e se distribuem quase que igualmente entre os dados, diferenciando-se apenas por ajustes e do distrito federal. \n",
+    "        - A variável categórica 'uf' contem os 27 categorias (estados e o distrito federal) e são distribuídos quase que equivalentemente, com exceção do distrito federal.\n",
+    "        - A variável categórica 'ajuste' contem apenas 'True' e 'False', indicando se o registro contem valores de ajuste. A distribuição se concentra em 'False' com cerca de 98,5% dos registros de repasses normais. \n",
+    "- DADOS NUMÉRICOS \n",
+    "    - EC123/COUN/VAAF/VAAR/VAAT/AJUSTE: Nos indicam que 90% dos registros estarem zerados, com exceção 'coun' com cerca de 75%, ocasionando uma mediana 0, mas por sua breve ou recente existência.\n",
+    "    - Nenhumas das variáveis numéricas possuem uma distribuição normal.\n",
+    "    - Todas as variáveis numéricas possuem assimetria a direita.\n",
+    "    - Todas as variáveis numéricas possuem curtose leptocúrtica (pontiaguda).\n",
+    "    - ec123, vaar, vaaf, vaat e ajuste possuem uma distribuição similar.\n",
+    "    - Todos os dados numéricos possuem uma amplitude elevada\n",
+    "    - Todos os dados numéricos possuem um desvio padrão elevado.\n",
+    "    - As variáveis ajuste e ec123 possuem o coeficiente de variação extremamente elevados (~40 e 27)\n",
+    "    - As variáveis vaat, vaar e vaaf possuem o coeficiente de variação elevados (~7, 7, 5)\n",
+    "    - O menor coeficiente de variação é da variável fpe com menos de 1.\n",
+    "    - As variáveis icms, ipi, ipva, itcmd e itr possuem uma alta correlação (pearson)\n",
+    "    - Correlacionando as variáveis (pearson), identificou-se que mais contribuem com o total de repasses são, na ordem, icms, fpm, ipva, itcmd, ipi, itr e fpe."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **OBJETIVOS**"
    ]
   },
